ps-martek/ps-martek/OnlineMarketPlatform/customer-service/Kubernetes/ingress-customer.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-customer
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/allowed-methods: "GET,POST"
#    nginx.ingress.kubernetes.io/auth-url: http://localhost:9090/api/authenticate
  #nginx.ingress.kubernetes.io/auth-response-headers: "authorization"
#    ingress.kubernetes.io/rewrite-target: /$7
spec:
  rules:
    - http:
        host: customer-service.local.svc
        paths:
          - pathType: Prefix
            path: /customer
            backend:
              service:
                name: customer-servicelb
                port:
                  number: 80
          - pathType: Prefix
            path: /api/inventory
            backend:
              service:
                name: inventoryservicelb
                port:
                  number: 8080
          - pathType: Prefix
            path: /api/product
            backend:
              service:
                name: productservicelb
                port:
                  number: 8080
